gatekeeper/templates/disallow-host-network.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostNetwork
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowhostnetwork

      violation[{"msg": "hostNetwork: true is not allowed"}] {
        input.review.object.spec.hostNetwork == true
      }

      violation[{"msg": "hostNetwork: true is not allowed"}] {
        input.review.object.spec.template.spec.hostNetwork == true
      }
