gatekeeper/templates/disallow-latest-tag.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowlatesttag
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatestTag
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowlatesttag

      violation[{"msg": msg}] {
        container := input.review.object.spec.containers[_]
        endswith(container.image, ":latest")
        msg := sprintf("image must not use :latest tag: %v", [container.image])
      }

      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]
        endswith(container.image, ":latest")
        msg := sprintf("image must not use :latest tag: %v", [container.image])
      }
