gatekeeper/templates/max-replicas.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8smaxreplicas
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sMaxReplicas
      validation:
        openAPIV3Schema:
          type: object
          properties:
            max:
              type: integer
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8smaxreplicas

      violation[{"msg": msg}] {
        max := input.parameters.max
        replicas := input.review.object.spec.replicas
        replicas > max
        msg := sprintf("Deployment replicas must be <= %v, got %v", [max, replicas])
      }
