gatekeeper/templates/require-limits.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirelimits
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sRequireLimits
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequirelimits

      containers[container] {
        container := input.review.object.spec.containers[_]
      }

      containers[container] {
        container := input.review.object.spec.template.spec.containers[_]
      }

      violation[{"msg": msg}] {
        container := containers[_]
        not container.resources.limits
        msg := sprintf("container %v must set resources.limits", [container.name])
      }
